[gd_scene load_steps=8 format=3 uid="uid://8odgggvd505"]

[ext_resource type="Script" path="res://scrips/shooter_projectile.gd" id="1_301vi"]
[ext_resource type="Texture2D" uid="uid://mf520pouahwx" path="res://sprites/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Totems/Wood Spike/Destroyed/1.png" id="2_altfh"]
[ext_resource type="Texture2D" uid="uid://bkafdx17pdn1a" path="res://sprites/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Totems/Wood Spike/Destroyed/2.png" id="3_jmxah"]
[ext_resource type="Texture2D" uid="uid://bo0cnos1ak3k4" path="res://sprites/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Totems/Wood Spike/Destroyed/3.png" id="4_hq2k7"]
[ext_resource type="Texture2D" uid="uid://do0vorpn2diem" path="res://sprites/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Totems/Wood Spike/Idle/1.png" id="5_t2rvw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mgx6b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_altfh")
}, {
"duration": 1.0,
"texture": ExtResource("3_jmxah")
}, {
"duration": 1.0,
"texture": ExtResource("4_hq2k7")
}],
"loop": false,
"name": &"destroyed",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_t2rvw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_301vi"]
radius = 3.0
height = 10.0

[node name="Shooter_projectile" type="RigidBody2D"]
z_index = -10
z_as_relative = false
collision_layer = 8
collision_mask = 4
gravity_scale = 0.0
script = ExtResource("1_301vi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mgx6b")
animation = &"destroyed"
autoplay = "idle"

[node name="Destroy_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Area2D" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_301vi")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Destroy_timer" to="." method="_on_destroy_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
